tests/semantic_errors/testcase13.c
// void function without return


void foo(int){
}

int main(void){
    return 2;
}